--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,84 @@
   pointer-events: none;
 }
 
+body{
+  background-color: #9CCDDC;
+}
+
+h1 {
+  color:#062C43;
+  font-size: 50px;
+  font-family: fantasy;
+}
+
+h2{
+  color: #062C43;
+  font-size: 35px;
+  font-family: monospace;
+}
+
+h3{
+  padding-right: 5%;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+img {
+  width: 50.33%;
+  height: auto;
+  border-radius: 25px;
+}
+
+#top-view{
+  display:flex;
+  align-items: center;
+  align-content: center;
+}
+
+button{
+  margin-left: 5%;
+  margin-right: 5%;
+  border-radius: 35%;
+  height: 55px;
+}
+
+a{
+  color: white;
+}
+
+#nasa-image {
+  padding: 5% 10% 5% 10%;
+  background-color: #5591A9;
+  border-radius: 25px;
+  color: white;
+}
+
+#news-articles {
+  margin-top: 5%;
+  margin-left: 14%;
+  margin-right: 14%;
+  padding: 5% 10% 5% 10%;
+  background-color: #5591A9;
+  border-radius: 25px;
+  color: white;
+}
+
+.wrapper {
+  display: inline-grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+#image-and-text{
+  display: flex;
+  align-items: center;
+  align-content: center;
+  justify-content: space-between;
+}
+
+#mirror-image{
+  -webkit-transform: scaleX(-1);
+  transform: scaleX(-1);
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
